--- a/views/main.twig
+++ b/views/main.twig
@@ -11,7 +11,7 @@
 <script src="https://use.fontawesome.com/3fcdf58d83.js"></script>
 <div>
     <div>
-        <img src="http://www.collaborativemediacenter.org/wp-content/uploads/2016/02/logo_blogger.jpg" alt="sdfsdfsd" class="img-thumbnail">
+        <img src="http://modgames.net/avatar/96/465584.png" alt="sdfsdfsd" class="img-thumbnail">
         <button type="button" class="btn btn-success">Add article</button>
     </div>
 </div>
