--- a/views/header.twig
+++ b/views/header.twig
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">BLOG</a>
+                <a class="navbar-brand" href="/">BLOG</a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="#">Blog<span class="sr-only">(current)</span></a>
+                        <a href="/">Blog<span class="sr-only">(current)</span></a>
                     </li>
                     <li>
                         <a href="#">Settings</a>
