--- a/views/main.twig
+++ b/views/main.twig
@@ -30,9 +30,9 @@
         {% for blog in blogs %}
             <tr>
                 <td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>
-                <td><a href="/{{ blog.id }}">{{ blog.date }}</a></td>
-                <td><a href="/{{ blog.id }}">{{ blog.author }}</a></td>
-                <td><a href="/{{ blog.id }}" data-toggle="tooltip" title="View"><i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
+                <td>{{ blog.date }}</td>
+                <td>{{ blog.author }}</td>
+                <td><a href="#" data-toggle="tooltip" title="View"><i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
             </tr>
         {% endfor %}
         </tbody>
