Add DB Add one blog from DB Add show all posts from DB

--- a/views/oneblog.twig
+++ b/views/oneblog.twig
@@ -15,7 +15,7 @@
         <h1>{{ blogs['title']}}</h1>
     </div>
     <div>
-        <p>{{ blogs['body'] }}</p>
+        <p>{{ blogs['text'] }}</p>
     </div>
 </div>
 
