--- a/views/main.twig
+++ b/views/main.twig
@@ -29,7 +29,8 @@
         <tbody>
         {% for blog in blogs %}
             <tr>
-                <td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>
+                {#<td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>#}
+                <td><a href="">{{ blog.title }}</a></td>
                 <td>{{ blog.date }}</td>
                 <td>{{ blog.author }}</td>
                 <td><a href="#" data-toggle="tooltip" title="View"><i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
