Add link to eye

--- a/views/main.twig
+++ b/views/main.twig
@@ -32,11 +32,10 @@
                 <td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>
                 <td>{{ blog.date }}</td>
                 <td>{{ blog.author }}</td>
-                <td><a href="#" data-toggle="tooltip" title="View"><i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
+                <td><a href="{{ path('blog_post', {'post': blog.id}) }}" data-toggle="tooltip" title="View"><i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
             </tr>
         {% endfor %}
         </tbody>
-
     </table>
 </div>
 </body>
