Add link to 'add article'

--- a/views/main.twig
+++ b/views/main.twig
@@ -12,7 +12,7 @@
 <div>
     <div>
         <img src="http://modgames.net/avatar/96/465584.png" alt="sdfsdfsd" class="img-thumbnail">
-        <button type="button" class="btn btn-success">Add article</button>
+        <a href="{{ path('new_post') }}" class="btn btn-success">Add article</a>
     </div>
 </div>
 <div>
