--- a/views/add_new_post.twig
+++ b/views/add_new_post.twig
@@ -19,22 +19,22 @@
     </div>
 </div>
 <div>
-    <form class="form-group">
+    <form class="form-group" action="{{ path('add_new_post') }}" method="post">
         <div class="form-group">
             <label for="exampleInputAuthor2">Author</label>
-            <input type="author" class="form-control" id="exampleInputAuthor2" placeholder="Enter author">
+            <input type="author" class="form-control" id="exampleInputAuthor2" placeholder="Enter author" name="Author">
         </div>
         <div class="form-group">
             <label for="exampleInputTitle2">Title</label>
-            <input type="title" class="form-control" id="exampleInputTitle2" placeholder="Title here">
+            <input type="title" class="form-control" id="exampleInputTitle2" placeholder="Title here" name="Title">
         </div>
         <div class="form-group">
             <label for="exampleInputDate2">Date</label>
-            <input type="datetime-local" class="form-control" id="exampleInputDate2">
+            <input type="datetime-local" class="form-control" id="exampleInputDate2" name="Date">
         </div>
         <div>
             <label for="exampleInputText2">Text</label>
-            <textarea class="form-control" rows="3" placeholder="Enter text here"></textarea>
+            <textarea class="form-control" rows="3" placeholder="Enter text here" name="Text"></textarea>
         </div>
         <button type="submit" class="btn btn-default">Send new post</button>
     </form>
