--- a/views/main.twig
+++ b/views/main.twig
@@ -7,11 +7,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 {#<script src="/bower_components/bootstrap/js/bootstrap.min.js"></script>#}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://use.fontawesome.com/3fcdf58d83.js"></script>
 <div>
     <div>
-        <img src="http://modgames.net/avatar/96/465584.png" alt="sdfsdfsd" class="img-thumbnail">
+        {#beautifull image#}
+        {#<img src="http://modgames.net/avatar/96/465584.png" alt="sdfsdfsd" class="img-thumbnail">#}
         <a href="{{ path('new_post') }}" class="btn btn-success">Add article</a>
     </div>
 </div>
@@ -32,7 +34,11 @@
                 <td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>
                 <td>{{ blog.date }}</td>
                 <td>{{ blog.author }}</td>
-                <td><a href="{{ path('blog_post', {'post': blog.id}) }}" data-toggle="tooltip" title="View"><i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
+                <td><a href="{{ path('blog_post', {'post': blog.id}) }}" data-toggle="tooltip" title="View">
+                        <i class="fa fa-eye" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Edit"><i
+                                class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="#" data-toggle="tooltip" title="Delete">
+                        <i class="fa fa-trash" aria-hidden="true"></i></a>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
