--- a/views/add_new_post.twig
+++ b/views/add_new_post.twig
@@ -22,21 +22,17 @@
     <form class="form-group" action="{{ path('add_new_post') }}" method="post">
         <div class="form-group">
             <label for="exampleInputAuthor2">Author</label>
-            <input type="author" class="form-control" id="exampleInputAuthor2" placeholder="Enter author" name="Author">
+            <input type="text" class="form-control" id="exampleInputAuthor2" placeholder="Enter author" name="post[author]">
         </div>
         <div class="form-group">
             <label for="exampleInputTitle2">Title</label>
-            <input type="title" class="form-control" id="exampleInputTitle2" placeholder="Title here" name="Title">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputDate2">Date</label>
-            <input type="datetime-local" class="form-control" id="exampleInputDate2" name="Date">
+            <input type="text" class="form-control" id="exampleInputTitle2" placeholder="Title here" name="post[title]">
         </div>
         <div>
             <label for="exampleInputText2">Text</label>
-            <textarea class="form-control" rows="3" placeholder="Enter text here" name="Text"></textarea>
+            <textarea class="form-control" rows="3" placeholder="Enter text here" name="post[text]"></textarea>
         </div>
-        <button type="submit" class="btn btn-default">Send new post</button>
+        <button type="submit" class="btn btn-default">Create new post</button>
     </form>
 </div>
 </body>
