--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,6 +1,6 @@
 <br>
 <footer>
     <div class="container">
-        <p>Code licensed <a href="https://mavix.io" target="_blank" rel="license">MavixIO</a>, Developer <a href="https://github.com/Chifek" target="_blank" rel="license">Chifek</a>.</p>
+        <p>Code licensed <a href="https://github.com/Chifek" target="_blank" rel="license">ME</a>, Developer <a href="https://github.com/Chifek" target="_blank" rel="license">Chifek</a>.</p>
     </div>
 </footer>
