--- a/views/oneblog.twig
+++ b/views/oneblog.twig
@@ -11,6 +11,7 @@
 <script src="https://use.fontawesome.com/3fcdf58d83.js"></script>
 
 <div>
+    <a href="{{ path('blog_posts') }}" class="btn btn-success">Back to the posts list</a>
     <div>
         <h1>{{ blogs['title']}}</h1>
     </div>
