--- a/views/add_new_post.twig
+++ b/views/add_new_post.twig
@@ -10,27 +10,21 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://use.fontawesome.com/3fcdf58d83.js"></script>
 <div>
-    <div>
-
-    </div>
-        <div>
-            <img src="http://modgames.net/avatar/96/465584.png" alt="sdfsdfsd" class="img-thumbnail"></div><br>
-        </div>
-    </div>
-</div>
-<div>
     <form class="form-group" action="{{ path('add_new_post') }}" method="post">
         <div class="form-group">
             <label for="exampleInputAuthor2">Author</label>
-            <input type="text" class="form-control" id="exampleInputAuthor2" placeholder="Enter author" name="post[author]">
+            <input type="text" class="form-control" id="exampleInputAuthor2"
+                   placeholder="Enter author" name="post[author]" required>
         </div>
         <div class="form-group">
             <label for="exampleInputTitle2">Title</label>
-            <input type="text" class="form-control" id="exampleInputTitle2" placeholder="Title here" name="post[title]">
+            <input type="text" class="form-control" id="exampleInputTitle2"
+                   placeholder="Title here" name="post[title]" required>
         </div>
         <div>
             <label for="exampleInputText2">Text</label>
-            <textarea class="form-control" rows="3" placeholder="Enter text here" name="post[text]"></textarea>
+            <textarea class="form-control" rows="3"
+                      placeholder="Enter text here" name="post[text]" required></textarea>
         </div>
         <button type="submit" class="btn btn-default">Create new post</button>
     </form>
