--- a/views/oneblog.twig
+++ b/views/oneblog.twig
@@ -26,6 +26,9 @@
         <input type="hidden" name="_method" value="delete">
         <button type="submit" class="btn btn-default">Delete post</button>
     </form>
+    <div>
+        <a href="{{ path('new_post') }}" class="btn btn-default">Add article</a>
+    </div>
 </div>
 </body>
 {% include ('footer.twig') %}
