--- a/views/main.twig
+++ b/views/main.twig
@@ -1,42 +1,31 @@
-{% include ('header.twig') %}
-<body>
-<br>
-<br>
-<br>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-{#<script src="/bower_components/bootstrap/js/bootstrap.min.js"></script>#}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<script src="https://use.fontawesome.com/3fcdf58d83.js"></script>
-<div>
+{% extends 'base.twig' %}
+{% block content %}
     <div>
-        {#beautifull image#}
-        {#<img src="http://modgames.net/avatar/96/465584.png" alt="sdfsdfsd" class="img-thumbnail">#}
-        <a href="{{ path('new_post') }}" class="btn btn-success">Add article</a>
+        <div>
+            <a href="{{ path('new_post') }}" class="btn btn-success">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add article
+            </a>
+        </div>
     </div>
-</div>
-<div>
-    <table class="table table-striped">
-        <thead>
+    <div>
+        <table class="table table-striped">
+            <thead>
             <tr>
                 <th>Title</th>
                 <th>Date</th>
                 <th>Author</th>
             </tr>
-        </thead>
+            </thead>
 
-        <tbody>
-        {% for blog in blogs %}
-            <tr>
-                <td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>
-                <td>{{ blog.date }}</td>
-                <td>{{ blog.author }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
-</body>
-{% include ('footer.twig') %}
+            <tbody>
+            {% for blog in blogs %}
+                <tr>
+                    <td><a href="{{ path('blog_post', {'post': blog.id}) }}">{{ blog.title }}</a></td>
+                    <td>{{ blog.date }}</td>
+                    <td>{{ blog.author }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endblock %}
