--- a/views/navbar.twig
+++ b/views/navbar.twig
@@ -29,7 +29,8 @@
             <form id="login-form" action="/login" method="get" role="form" style="display: block;"
                   class="navbar-form navbar-right">
                 <div>
-                    <button style="" type="submit" class="btn btn-default">Log out</button>
+                    <a href="#">{{ users.username }} <span class="glyphicon glyphicon-log-out"
+                                                           aria-hidden="true"></span></a>
                 </div>
             </form>
         </div>
