--- a/views/base.twig
+++ b/views/base.twig
@@ -26,7 +26,9 @@
 
     <script src="https://use.fontawesome.com/3fcdf58d83.js"></script>
     <style>
-        body { padding-top: 70px; }
+        body {
+            padding-top: 70px;
+        }
     </style>
 </head>
 <body>
