--- a/views/navbar.twig
+++ b/views/navbar.twig
@@ -29,7 +29,7 @@
             <form id="login-form" action="/login" method="get" role="form" style="display: block;"
                   class="navbar-form navbar-right">
                 <div>
-                    <a href="#"> <span class="glyphicon glyphicon-log-out"
+                    <a href="{{ path('session_end') }}"> <span class="glyphicon glyphicon-log-out"
                                        aria-hidden="true"></span></a>
                 </div>
             </form>
