--- a/views/main.twig
+++ b/views/main.twig
@@ -8,6 +8,9 @@
         </div>
     </div>
     <div>
+        <div>
+            Total articles: {{ count }}
+        </div>
         <table class="table table-striped">
             <thead>
             <tr>
