--- a/views/navbar.twig
+++ b/views/navbar.twig
@@ -16,7 +16,7 @@
                     <a href="/">Blog<span class="sr-only">(current)</span></a>
                 </li>
                 <li>
-                    <a href="#">Settings</a>
+                    <a href="{{ path('user_profile') }}">Settings</a>
                 </li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
